--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -2,14 +2,12 @@
 <resources>
 
     <string name="app_name">Software Engineering Lite</string>
-    <string name="action_settings">Settings</string>
-    <string name="hello_world">Hello world!</string>
-    <string name="title_activity_dummy">DummyActivity</string>
     <string name="tab_theory">Theory</string>
     <string name="tab_self_evaluation">Self-Evaluation</string>
     <string name="tab_case_study">Case Study</string>
     <string name="tab_references">References</string>
     <string name="share_title">Share</string>
     <string name="share_text">Have you used Software Engineering Lite yet? Download and give it a try today! </string>
+    <string name="greetings">Greetings!</string>
 
 </resources>
